# haskell-pretty

./: LICENSE  README.md  Setup.hs  pretty-hs.cabal  pretty.cabal
src/: Main.hs  Pretty.hs
test/: PrettySpec.hs
