Name:                   pretty-hs
Version:                0.0.1
Author:                 Zane-XY-W <_@_.org >
Maintainer:             Zane-XY-W <_@_.org >
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Executable pretty-hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Main-Is:              Main.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5,
                        haskell-src-exts >= 1.14.0

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base >= 4 && < 5,
                        hspec,
                        haskell-src-exts >= 1.14.0

Source-Repository head
  Type:                 git
--  Location:
